--- a/app/src/main/res/xml/verbs.xml
+++ b/app/src/main/res/xml/verbs.xml
@@ -745,7 +745,7 @@
         gr="3"
         co="3"
         de="Cesser de vivre. Par exagération, éprouver fortement une sensation. Être sur le point de mourir."
-        no=""
+        no="être"
         tren="die"
         tres="morir"
         trpt="morrer" />
