--- a/app/src/main/res/xml/conjugations.xml
+++ b/app/src/main/res/xml/conjugations.xml
@@ -6571,7 +6571,7 @@
     <conjugation
         id          = "66"
         term        = ""
-        radicals    = ""
+        radicals    = "tra"
         inf_pr      = "traire"
         inf_pa      = "avoir trait"
         pa_pr       = "trayant"
@@ -6675,7 +6675,7 @@
     <conjugation
         id          = "67"
         term        = ""
-        radicals    = ""
+        radicals    = "fai, fo, fe, fi, fî"
         inf_pr      = "faire"
         inf_pa      = "avoir fait"
         pa_pr       = "faisant"
@@ -6779,7 +6779,7 @@
     <conjugation
         id          = "68"
         term        = ""
-        radicals    = ""
+        radicals    = "pl"
         inf_pr      = "plaire"
         inf_pa      = "avoir plu"
         pa_pr       = "plaisant"
@@ -6883,7 +6883,7 @@
     <conjugation
         id          = "69"
         term        = "aître"
-        radicals    = ""
+        radicals    = "conn"
         inf_pr      = "connaître"
         inf_pa      = "avoir connu"
         pa_pr       = "connaissant"
@@ -6987,7 +6987,7 @@
     <conjugation
         id          = "70"
         term        = ""
-        radicals    = ""
+        radicals    = "na, né"
         inf_pr      = "naître"
         inf_pa      = "être né(e)(s)"
         pa_pr       = "naissant"
